--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,11 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "/home/aziz/Documents/Programming Work/Adventure game/**/*.jar"
+            "/home/aziz/Documents/Programming Work/Adventure game/**/*.jar",
+            "adventurestub.jar"
         ],
         "exclude": [
-            "adventurestub.jar"
+            
         ]
     }
 }
